--- a/packages/core/src/tests/action-card/selected/index.html
+++ b/packages/core/src/tests/action-card/selected/index.html
@@ -20,53 +20,61 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="notification"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="alarm"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="critical"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="warning"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="info"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="neutral"
     ></ix-action-card>
     <ix-action-card
+      selected
       icon="refresh"
       heading="Scan forn new devices"
       subheading="Secondary text"
       variant="success"
     ></ix-action-card>
-    <ix-action-card>
+    <ix-action-card selected>
       <div class="d-flex flex-column align-items-center" style="color: #ff00ff">
         <ix-icon name="refresh"></ix-icon>
         <ix-typography> Use Swap Instance to replace content </ix-typography>
