--- a/packages/core/src/tests/push-card/basic/index.html
+++ b/packages/core/src/tests/push-card/basic/index.html
@@ -19,68 +19,68 @@ SPDX-License-Identifier: MIT
     </style>
   </head>
   <body>
-    <ix-notification-card
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="insight"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="notification"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="alarm"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="critical"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="warning"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="success"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="info"
-    ></ix-notification-card>
-    <ix-notification-card
+    ></ix-push-card>
+    <ix-push-card
       icon="bulb"
       notification="99"
       heading="Heading content"
       subheading="Subheading"
       variant="neutral"
-    ></ix-notification-card>
+    ></ix-push-card>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
