--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -25,19 +25,7 @@ SPDX-License-Identifier: MIT
 </head>
 
 <body style="margin: 0px; height: 100vh">
-  <ix-select mode="multiple">
-    <ix-select-item label="Item 1" value="1"></ix-select-item>
-    <ix-select-item label="Item 2" value="2"></ix-select-item>
-    <ix-select-item label="Item 3" value="3"></ix-select-item>
-    <ix-select-item label="Item 4" value="4"></ix-select-item>
-  </ix-select>
-  <script>
-    (async function () {
-      await window.customElements.whenDefined('ix-select');
-      const select = document.querySelector('ix-select');
-      select.selectedIndices = ['1', '3'];
-    })();
-  </script>
+  <my-component />
 </body>
 
 </html>
