--- a/packages/core/src/tests/card-list/layout-scroll/index.html
+++ b/packages/core/src/tests/card-list/layout-scroll/index.html
@@ -76,12 +76,40 @@ SPDX-License-Identifier: MIT
         variant="info"
       ></ix-push-card>
       <ix-push-card
+        icon="bulb"
+        notification="99"
+        heading="Heading content End of list"
+        subheading="Subheading"
+        variant="neutral"
+      ></ix-push-card>
+      <ix-push-card
+        icon="bulb"
+        notification="99"
+        heading="Heading content End of list"
+        subheading="Subheading"
+        variant="neutral"
+      ></ix-push-card>
+      <ix-push-card
+        icon="bulb"
+        notification="99"
+        heading="Heading content End of list"
+        subheading="Subheading"
+        variant="neutral"
+      ></ix-push-card>
+      <ix-push-card
         id="end"
         icon="bulb"
         notification="99"
         heading="Heading content End of list"
         subheading="Subheading"
         variant="neutral"
+      ></ix-push-card>
+      <ix-push-card
+        icon="bulb"
+        notification="99"
+        heading="Heading content"
+        subheading="Subheading"
+        variant="success"
       ></ix-push-card>
     </ix-card-list>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
