--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -28,7 +28,7 @@ SPDX-License-Identifier: MIT
       defineCustomElements();
     </script>
   </head>
-  <body style="margin: 0px; height: 100vh">
+  <body class="theme-classic-dark" style="margin: 0px; height: 100vh">
     <my-component />
   </body>
 </html>
