--- a/packages/core/src/tests/key-value-list/basic/index.html
+++ b/packages/core/src/tests/key-value-list/basic/index.html
@@ -115,6 +115,26 @@ SPDX-License-Identifier: MIT
       </ix-key-value>
     </ix-key-value-list>
 
+    <ix-key-value-list striped="true">
+      <ix-key-value
+        label="Label"
+        label-position="left"
+        value="Value"
+      ></ix-key-value>
+
+      <ix-key-value
+        label="Label"
+        label-position="left"
+        value="Value"
+      ></ix-key-value>
+
+      <ix-key-value
+        label="Label"
+        label-position="left"
+        value="Value"
+      ></ix-key-value>
+    </ix-key-value-list>
+
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
