--- a/packages/html-test-app/src/preview-examples/input-labels.html
+++ b/packages/html-test-app/src/preview-examples/input-labels.html
@@ -8,23 +8,25 @@ SPDX-License-Identifier: MIT
 <html>
 
 <head>
-  <title>Input with icon example</title>
+  <title>Input Search example</title>
 </head>
+
+
 
 <body class="theme-brand-dark">
   <!-- Preview code -->
   <form class="needs-validation m-2">
+    <ix-input-group style="margin-bottom: 0.5rem;">
+      <span slot="input-start">Label Start</span>
+      <input type="text" class="form-control" />
+    </ix-input-group>
+
     <ix-input-group>
       <input type="text" class="form-control" />
-      <span slot="input-end"><ix-icon name="about" size="16"></ix-icon></span>
+      <span slot="input-end">Label End</span>
     </ix-input-group>
   </form>
   <!-- Preview code -->
-  <script>
-    document
-      .querySelector('form')
-      .addEventListener('submit', (evt) => evt.preventDefault());
-  </script>
   <script type="module" src="./init.js"></script>
 </body>
 
