--- a/packages/angular-test-app/src/preview-examples/card-list.html
+++ b/packages/angular-test-app/src/preview-examples/card-list.html
@@ -6,7 +6,7 @@ SPDX-License-Identifier: MIT
 This source code is licensed under the MIT license found in the
 LICENSE file in the root directory of this source tree.
 -->
-<ix-card-list label="Layout Stack" show-all-count="12" list-style="stack">
+<ix-card-list label="Stack Layout" show-all-count="12" list-style="stack">
   <ix-push-card
     icon="rocket"
     notification="3"
@@ -30,7 +30,7 @@ LICENSE file in the root directory of this source tree.
   ></ix-push-card>
 </ix-card-list>
 
-<ix-card-list label="Layout Flow" show-all-count="12" list-style="scroll">
+<ix-card-list label="Flow Layout" show-all-count="12" list-style="scroll">
   <ix-push-card
     icon="rocket"
     notification="3"
