--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -25,7 +25,16 @@ SPDX-License-Identifier: MIT
 </head>
 
 <body style="margin: 0px; height: 100vh">
-  <my-component />
+  <div style="padding: 4rem">
+    <ix-button class="any-class" style="margin-right: 4rem;">Hover me</ix-button>
+    <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
+
+    <ix-button my-custom-special-selector="any-value">Also hover me</ix-button>
+    <ix-tooltip for="[my-custom-special-selector='any-value']">
+      Custom selector
+    </ix-tooltip>
+  </div>
+
 </body>
 
 </html>
