--- a/packages/core/src/tests/event-list/chevron/index.html
+++ b/packages/core/src/tests/event-list/chevron/index.html
@@ -14,19 +14,15 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-event-list>
-      <ix-event-list-item color="color-primary" disabled chevron
+    <ix-event-list chevron>
+      <ix-event-list-item color="color-primary" disabled
         >Text 1</ix-event-list-item
       >
-      <ix-event-list-item color="color-primary" chevron
-        >Text 2</ix-event-list-item
-      >
-      <ix-event-list-item color="color-primary" selected chevron
+      <ix-event-list-item color="color-primary">Text 2</ix-event-list-item>
+      <ix-event-list-item color="color-primary" selected
         >Text 3</ix-event-list-item
       >
-      <ix-event-list-item color="color-primary" chevron
-        >Text 4</ix-event-list-item
-      >
+      <ix-event-list-item color="color-primary">Text 4</ix-event-list-item>
     </ix-event-list>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
