--- a/packages/html-test-app/src/preview-examples/input-readonly.html
+++ b/packages/html-test-app/src/preview-examples/input-readonly.html
@@ -14,7 +14,7 @@ SPDX-License-Identifier: MIT
     <form class="needs-validation m-2">
       <input
         class="form-control"
-        defaultValue="Some example text"
+        value="Some example text"
         placeholder="Enter text here"
         type="text"
         readonly
