--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary-outline.html
@@ -12,29 +12,27 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      ix-icon-toggle-button {
+        margin: 0.25rem;
+      }
+    </style>
   </head>
   <body>
     <!-- Preview code -->
     <div>
+      <ix-icon-toggle-button outline icon="checkboxes"></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
-        outline
-        icon="checkboxes"
-      ></ix-icon-toggle-button>
-      <ix-icon-toggle-button
-        class="m-1"
         outline
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         icon="checkboxes"
         disabled
@@ -42,27 +40,23 @@ LICENSE file in the root directory of this source tree.
       ></ix-icon-toggle-button>
 
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="16"
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="16"
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="16"
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="16"
         icon="checkboxes"
@@ -71,27 +65,23 @@ LICENSE file in the root directory of this source tree.
       ></ix-icon-toggle-button>
 
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="12"
         icon="checkboxes"
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="12"
         icon="checkboxes"
         pressed
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="12"
         icon="checkboxes"
         disabled
       ></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
         outline
         size="12"
         icon="checkboxes"
