--- a/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary.html
+++ b/packages/html-test-app/src/preview-examples/icon-toggle-button-secondary.html
@@ -12,26 +12,19 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      ix-icon-toggle-button {
+        margin: 0.25rem;
+      }
+    </style>
   </head>
   <body>
     <!-- Preview code -->
     <div>
+      <ix-icon-toggle-button icon="checkboxes"></ix-icon-toggle-button>
+      <ix-icon-toggle-button icon="checkboxes" pressed></ix-icon-toggle-button>
+      <ix-icon-toggle-button icon="checkboxes" disabled></ix-icon-toggle-button>
       <ix-icon-toggle-button
-        class="m-1"
-        icon="checkboxes"
-      ></ix-icon-toggle-button>
-      <ix-icon-toggle-button
-        class="m-1"
-        icon="checkboxes"
-        pressed
-      ></ix-icon-toggle-button>
-      <ix-icon-toggle-button
-        class="m-1"
-        icon="checkboxes"
-        disabled
-      ></ix-icon-toggle-button>
-      <ix-icon-toggle-button
-        class="m-1"
         icon="checkboxes"
         disabled
         loading
