--- a/packages/html-test-app/src/preview-examples/toggle-button-primary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-primary-ghost.html
@@ -12,20 +12,23 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      ix-toggle-button {
+        margin: 0.25rem;
+      }
+    </style>
   </head>
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button variant="Primary" ghost class="m-1">
-        Normal
-      </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost class="m-1" pressed>
+      <ix-toggle-button variant="Primary" ghost> Normal </ix-toggle-button>
+      <ix-toggle-button variant="Primary" ghost pressed>
         Pressed
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost class="m-1" disabled>
+      <ix-toggle-button variant="Primary" ghost disabled>
         Disabled
       </ix-toggle-button>
-      <ix-toggle-button variant="Primary" ghost class="m-1" disabled loading>
+      <ix-toggle-button variant="Primary" ghost disabled loading>
         Loading
       </ix-toggle-button>
     </div>
