--- a/packages/html-test-app/src/preview-examples/toggle-button-secondary-ghost.html
+++ b/packages/html-test-app/src/preview-examples/toggle-button-secondary-ghost.html
@@ -12,16 +12,19 @@ LICENSE file in the root directory of this source tree.
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
+    <style>
+      ix-toggle-button {
+        margin: 0.25rem;
+      }
+    </style>
   </head>
   <body>
     <!-- Preview code -->
     <div>
-      <ix-toggle-button ghost class="m-1"> Normal </ix-toggle-button>
-      <ix-toggle-button ghost class="m-1" pressed> Pressed </ix-toggle-button>
-      <ix-toggle-button ghost class="m-1" disabled> Disabled </ix-toggle-button>
-      <ix-toggle-button ghost class="m-1" disabled loading>
-        Loading
-      </ix-toggle-button>
+      <ix-toggle-button ghost> Normal </ix-toggle-button>
+      <ix-toggle-button ghost pressed> Pressed </ix-toggle-button>
+      <ix-toggle-button ghost disabled> Disabled </ix-toggle-button>
+      <ix-toggle-button ghost disabled loading> Loading </ix-toggle-button>
     </div>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
