--- a/packages/core/src/index.html
+++ b/packages/core/src/index.html
@@ -30,5 +30,6 @@ SPDX-License-Identifier: MIT
 
   <body style="margin: 0px; height: 100vh">
     <my-component />
+    <ix-time-picker></ix-time-picker>
   </body>
 </html>
