--- a/packages/core/src/tests/datetime-picker-rework/basic/index.html
+++ b/packages/core/src/tests/datetime-picker-rework/basic/index.html
@@ -12,11 +12,6 @@ SPDX-License-Identifier: MIT
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0"
     />
     <title>Stencil Component Starter</title>
-    <style>
-      ix-time-picker {
-        margin-inline-end: 1rem;
-      }
-    </style>
   </head>
   <body>
     <div
@@ -27,14 +22,12 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-time-picker time="10:11:12"></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-hour></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-minutes></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-seconds></ix-time-picker>
-      <ix-time-picker
-        time="10:11:12"
-        show-time-reference="true"
-      ></ix-time-picker>
+      <ix-datetime-picker-rework
+        range="false"
+        from="1990/03/29"
+        time="09:10:12"
+        week-start-index="1"
+      ></ix-datetime-picker-rework>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
