--- a/packages/core/src/tests/time-picker-rework/basic/index.html
+++ b/packages/core/src/tests/time-picker-rework/basic/index.html
@@ -13,7 +13,7 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
     <style>
-      ix-time-picker {
+      ix-time-picker-rework {
         margin-inline-end: 1rem;
       }
     </style>
@@ -27,14 +27,14 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-time-picker time="10:11:12"></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-hour></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-minutes></ix-time-picker>
-      <ix-time-picker time="10:11:12" show-seconds></ix-time-picker>
-      <ix-time-picker
-        time="10:11:12"
-        show-time-reference="true"
-      ></ix-time-picker>
+      <ix-time-picker-rework time="10:11:12"></ix-time-picker-rework>
+      <ix-time-picker-rework time="10:11:12" show-hour></ix-time-picker-rework>
+      <ix-time-picker-rework time="10:11:12" show-minutes></ix-time-picker-rework>
+      <ix-time-picker-rework time="10:11:12" show-seconds></ix-time-picker-rework>
+      <ix-time-picker-rework
+        time="10:11:12 AM"
+        format="hh:mm:ss A"
+      ></ix-time-picker-rework>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
