--- a/packages/core/src/tests/time-picker-rework/basic/index.html
+++ b/packages/core/src/tests/time-picker-rework/basic/index.html
@@ -27,11 +27,12 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-time-picker-rework time="10:11:12"></ix-time-picker-rework>
-      <ix-time-picker-rework time="10:11:12" show-hour></ix-time-picker-rework>
-      <ix-time-picker-rework time="10:11:12" show-minutes></ix-time-picker-rework>
-      <ix-time-picker-rework time="10:11:12" show-seconds></ix-time-picker-rework>
+      <ix-time-picker-rework style="width: min-content" time="10:11:12"></ix-time-picker-rework>
+      <ix-time-picker-rework style="width: min-content" time="10:11:12" show-minutes="false" show-seconds="false"></ix-time-picker-rework>
+      <ix-time-picker-rework style="width: min-content" time="10:11:12" show-hours="false" show-seconds="false"></ix-time-picker-rework>
+      <ix-time-picker-rework style="width: min-content" time="10:11:12" show-hours="false" show-minutes="false"></ix-time-picker-rework>
       <ix-time-picker-rework
+        style="width: min-content"
         time="10:11:12 AM"
         format="hh:mm:ss A"
       ></ix-time-picker-rework>
