--- a/packages/documentation/static/code-runtime/react/public/index.html
+++ b/packages/documentation/static/code-runtime/react/public/index.html
@@ -1,3 +1,9 @@
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+-->
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <div id="root"></div>
