--- a/packages/documentation/static/code-runtime/html/src/index.html
+++ b/packages/documentation/static/code-runtime/html/src/index.html
@@ -20,6 +20,12 @@ SPDX-License-Identifier: MIT
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ag-grid-community/styles/ag-theme-alpine.css"
     />
+    <style>
+      body {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
   </head>
   <body>
     <!-- IX_INJECT_SOURCE_CODE -->
