--- a/packages/documentation/static/code-runtime/react/public/index.html
+++ b/packages/documentation/static/code-runtime/react/public/index.html
@@ -5,5 +5,11 @@ SPDX-License-Identifier: MIT
 -->
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<style>
+  #root {
+    height: 100vh;
+    width: 100vw;
+  }
+</style>
 
 <div id="root"></div>
