--- a/packages/documentation/static/code-runtime/vue/index.html
+++ b/packages/documentation/static/code-runtime/vue/index.html
@@ -11,6 +11,12 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>iX Vue Example</title>
+    <style>
+      #app {
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
