--- a/packages/html-test-app/src/index.html
+++ b/packages/html-test-app/src/index.html
@@ -16,8 +16,8 @@ LICENSE file in the root directory of this source tree.
   </head>
   <body class="theme-classic-new-dark">
     <!-- Preview code -->
-    <ix-button id="test-button" class="m-1" variant="primary">Button</ix-button>
+    <ix-button>Button</ix-button>
     <!-- Preview code -->
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./preview-examples/init.js"></script>
   </body>
 </html>
