--- a/packages/angular-test-app/src/preview-examples/dropdown-quick-actions.html
+++ b/packages/angular-test-app/src/preview-examples/dropdown-quick-actions.html
@@ -1,3 +1,12 @@
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+
+This source code is licensed under the MIT license found in the
+LICENSE file in the root directory of this source tree.
+-->
+
 <ix-button #trigger>Open</ix-button>
 <ix-dropdown [ixDropdownTrigger]="trigger">
   <ix-dropdown-quick-actions>
