--- a/packages/angular-test-app/src/preview-examples/tooltip-title.html
+++ b/packages/angular-test-app/src/preview-examples/tooltip-title.html
@@ -1,3 +1,12 @@
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+
+This source code is licensed under the MIT license found in the
+LICENSE file in the root directory of this source tree.
+-->
+
 <div style="padding: 4rem">
   <ix-button data-tooltip="myTooltip">Hover me</ix-button>
   <ix-tooltip for="[data-tooltip='myTooltip']" title-content="My Tooltip">
