--- a/packages/angular-test-app/src/preview-examples/tooltip.html
+++ b/packages/angular-test-app/src/preview-examples/tooltip.html
@@ -1,3 +1,12 @@
+<!--
+SPDX-FileCopyrightText: 2023 Siemens AG
+
+SPDX-License-Identifier: MIT
+
+This source code is licensed under the MIT license found in the
+LICENSE file in the root directory of this source tree.
+-->
+
 <div style="padding: 4rem">
   <ix-button class="any-class" style="margin-right: 4rem">Hover me</ix-button>
   <ix-tooltip for=".any-class">Simple selector</ix-tooltip>
