--- a/packages/html-test-app/src/preview-examples/buttons.html
+++ b/packages/html-test-app/src/preview-examples/buttons.html
@@ -14,7 +14,7 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="theme-classic-dark">
     <!-- Preview code -->
     <div>
       <ix-button class="m-1"> Button </ix-button>
