--- a/packages/html-test-app/src/preview-examples/echarts.html
+++ b/packages/html-test-app/src/preview-examples/echarts.html
@@ -14,163 +14,164 @@ LICENSE file in the root directory of this source tree.
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ECharts example</title>
     <!-- Sources -->
-    <script
-      type="module"
-      src="https://cdn.jsdelivr.net/npm/echarts@5.4.3/dist/echarts.min.js"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@5.4.1/dist/echarts.min.js"></script>
     <!-- Sources -->
   </head>
   <body class="">
     <!-- Preview code -->
     <div
       id="main"
-      style="display: block; position: relative; width: 100%; height: 40rem"
+      style="
+        display: block;
+        position: relative;
+        width: 100%;
+        height: 40rem;
+        padding-top: 1rem;
+      "
     ></div>
 
     <script type="module">
-      import { registerTheme } from '@siemens/ix-echarts';
+      import { convertThemeName, registerTheme } from '@siemens/ix-echarts';
+      import { themeSwitcher } from '@siemens/ix';
 
-      // Draw the chart
-      const drawChart = (myChart) => {
-        myChart.setOption({
-          tooltip: {
-            trigger: 'axis',
-            axisPointer: {
-              type: 'shadow',
+      function initChart(theme, options) {
+        var myChart = echarts.init(
+          document.querySelector('#main'),
+          convertThemeName(theme)
+        );
+        myChart.setOption(options);
+
+        return myChart;
+      }
+
+      const options = {
+        tooltip: {
+          trigger: 'axis',
+          axisPointer: {
+            type: 'shadow',
+          },
+        },
+        legend: {},
+        grid: {
+          left: '3%',
+          right: '4%',
+          bottom: '3%',
+          containLabel: true,
+        },
+        xAxis: [
+          {
+            type: 'category',
+            data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+          },
+        ],
+        yAxis: [
+          {
+            type: 'value',
+          },
+        ],
+        series: [
+          {
+            name: 'Direct',
+            type: 'bar',
+            emphasis: {
+              focus: 'series',
+            },
+            data: [320, 332, 301, 334, 390, 330, 320],
+          },
+          {
+            name: 'Email',
+            type: 'bar',
+            stack: 'Ad',
+            emphasis: {
+              focus: 'series',
+            },
+            data: [120, 132, 101, 134, 90, 230, 210],
+          },
+          {
+            name: 'Union Ads',
+            type: 'bar',
+            stack: 'Ad',
+            emphasis: {
+              focus: 'series',
+            },
+            data: [220, 182, 191, 234, 290, 330, 310],
+          },
+          {
+            name: 'Video Ads',
+            type: 'bar',
+            stack: 'Ad',
+            emphasis: {
+              focus: 'series',
+            },
+            data: [150, 232, 201, 154, 190, 330, 410],
+          },
+          {
+            name: 'Search Engine',
+            type: 'bar',
+            data: [862, 1018, 964, 1026, 1679, 1600, 1570],
+            emphasis: {
+              focus: 'series',
+            },
+            markLine: {
+              lineStyle: {
+                type: 'dashed',
+              },
+              data: [[{ type: 'min' }, { type: 'max' }]],
             },
           },
-          legend: {},
-          grid: {
-            left: '3%',
-            right: '4%',
-            bottom: '3%',
-            containLabel: true,
+          {
+            name: 'Baidu',
+            type: 'bar',
+            barWidth: 5,
+            stack: 'Search Engine',
+            emphasis: {
+              focus: 'series',
+            },
+            data: [620, 732, 701, 734, 1090, 1130, 1120],
           },
-          xAxis: [
-            {
-              type: 'category',
-              data: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+          {
+            name: 'Google',
+            type: 'bar',
+            stack: 'Search Engine',
+            emphasis: {
+              focus: 'series',
             },
-          ],
-          yAxis: [
-            {
-              type: 'value',
+            data: [120, 132, 101, 134, 290, 230, 220],
+          },
+          {
+            name: 'Bing',
+            type: 'bar',
+            stack: 'Search Engine',
+            emphasis: {
+              focus: 'series',
             },
-          ],
-          series: [
-            {
-              name: 'Direct',
-              type: 'bar',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [320, 332, 301, 334, 390, 330, 320],
+            data: [60, 72, 71, 74, 190, 130, 110],
+          },
+          {
+            name: 'Others',
+            type: 'bar',
+            stack: 'Search Engine',
+            emphasis: {
+              focus: 'series',
             },
-            {
-              name: 'Email',
-              type: 'bar',
-              stack: 'Ad',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [120, 132, 101, 134, 90, 230, 210],
-            },
-            {
-              name: 'Union Ads',
-              type: 'bar',
-              stack: 'Ad',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [220, 182, 191, 234, 290, 330, 310],
-            },
-            {
-              name: 'Video Ads',
-              type: 'bar',
-              stack: 'Ad',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [150, 232, 201, 154, 190, 330, 410],
-            },
-            {
-              name: 'Search Engine',
-              type: 'bar',
-              data: [862, 1018, 964, 1026, 1679, 1600, 1570],
-              emphasis: {
-                focus: 'series',
-              },
-              markLine: {
-                lineStyle: {
-                  type: 'dashed',
-                },
-                data: [[{ type: 'min' }, { type: 'max' }]],
-              },
-            },
-            {
-              name: 'Baidu',
-              type: 'bar',
-              barWidth: 5,
-              stack: 'Search Engine',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [620, 732, 701, 734, 1090, 1130, 1120],
-            },
-            {
-              name: 'Google',
-              type: 'bar',
-              stack: 'Search Engine',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [120, 132, 101, 134, 290, 230, 220],
-            },
-            {
-              name: 'Bing',
-              type: 'bar',
-              stack: 'Search Engine',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [60, 72, 71, 74, 190, 130, 110],
-            },
-            {
-              name: 'Others',
-              type: 'bar',
-              stack: 'Search Engine',
-              emphasis: {
-                focus: 'series',
-              },
-              data: [62, 82, 91, 84, 109, 110, 120],
-            },
-          ],
-        });
+            data: [62, 82, 91, 84, 109, 110, 120],
+          },
+        ],
       };
 
+      // providing echarts is in this case optional
       registerTheme(echarts);
-      const theme = document.body.className.replace('theme-', ''); // brand-dark, brand-light, classic-dark or classic-light
-      var myChart = echarts.init(document.querySelector('#main'), theme);
 
-      // Draw the chart
-      drawChart(myChart);
+      var myChart = initChart(themeSwitcher.getCurrentTheme(), options);
 
-      // Create a MutationObserver instance
-      const observer = new MutationObserver((mutationsList, observer) => {
-        for (let mutation of mutationsList) {
-          if (mutation.attributeName === 'class') {
-            let newTheme = document.body.className.replace('theme-', '');
-            myChart.dispose();
-            myChart = echarts.init(document.querySelector('#main'), newTheme);
-
-            // Draw the chart
-            drawChart(myChart);
-          }
-        }
+      themeSwitcher.themeChanged.on((theme) => {
+        myChart.dispose();
+        myChart = initChart(theme, options);
       });
 
-      // Start observing the body for configured mutations
-      observer.observe(document.body, { attributes: true });
+      window.onresize = function () {
+        myChart.resize();
+      };
     </script>
     <!-- Preview code -->
     <script type="module" src="./init.js"></script>
